Allow to configure workflow job in Groovy file
Since introduction of the Jenkins Pipeline plugin
(https://wiki.jenkins-ci.org/display/JENKINS/Pipeline+Plugin), one can
configure a Pipeline job using a Groovy file lying with the source code
(see: https://jenkins.io/solutions/pipeline/).

We add support here for this kind of jobs, introducing a new component:
workflow-scm. This component contains information about the repository to
clone and the name of the file where the job configuration can be found.

Change-Id: I098b9673c44b1281fa0954193d8fadf273685386

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,3 +80,4 @@ jenkins_jobs.modules =
     triggers=jenkins_jobs.modules.triggers:Triggers
     wrappers=jenkins_jobs.modules.wrappers:Wrappers
     zuul=jenkins_jobs.modules.zuul:Zuul
+    workflow-scm=jenkins_jobs.modules.scm:WorkflowSCM
